Fixed social share button alignment

--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -2,3 +2,7 @@
   border-radius:50%;
    min-width: 20px;
 }
+
+.social span {
+  vertical-align: middle;
+}
